--- a/herogame/herogame.vcxproj
+++ b/herogame/herogame.vcxproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="herogame.h" />
+    <ClInclude Include="win32_herogame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
