--- a/herogame/herogame.vcxproj.filters
+++ b/herogame/herogame.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="win32_herogame.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="herogame_platform.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
