工程文件更新

--- a/herogame/herogame.vcxproj
+++ b/herogame/herogame.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="herogame.h" />
     <ClInclude Include="herogame_intrinsics.h" />
     <ClInclude Include="herogame_platform.h" />
+    <ClInclude Include="herogame_random.h" />
     <ClInclude Include="herogame_tile.h" />
     <ClInclude Include="win32_herogame.h" />
   </ItemGroup>
